# aioli

./: .gitignore  .travis.yml  README.md  pyproject.toml
aioli/: __init__.py  __main__.py  __state.py  app.py  component.py  config.py  datastores.py  errors.py  exceptions.py  log.py  package.py  poetry.py  registry.py  servers.py  service.py  unit.py  utils.py  validation.py
aioli/cli/: __init__.py  config.py  table.py  utils.py
aioli/cli/commands/: __init__.py  root.py
aioli/cli/commands/app/: commands.py
aioli/cli/commands/pkg/: __init__.py  commands.py  local.py  pypi.py
aioli/cli/commands/repositories/: __init__.py  (+2 more)
aioli/commands/: __init__.py  root.py
aioli/commands/pkg/: commands.py  pypi.py
aioli/commands/root/: commands.py
aioli/controller/: base.py  decorators.py
aioli/project/: __init__.py  installer.py  profile.py
aioli/project/writers/: __init__.py
aioli/repository/: __init__.py  schemas.py
docs/: conf.py  extensions.rst  index.rst  requirements.txt
docs/_static/: custom.css
docs/api/: application.rst  config.rst  package.rst  unit.rst
docs/api/controller/: http.rst  index.rst
docs/develop/: application.rst  config.rst  service.rst  unit.rst
docs/develop/controller/: gql.rst  http.rst  index.rst  ws.rst
docs/examples/config/: schema.rst
docs/examples/service/: nested.rst
docs/manage/: cli.rst  shell.rst
docs/setup/: configure.rst  deploy.rst
templates/app/: aioli.cfg  main.py  pyproject.toml
templates/app/example_pkg/: __init__.py  controller.py  schema.py
tests/: conftest.py  test_package.py  test_unit.py
(+16 files in other folders)
