[tool.poetry]
name = "example_app"
version = "0.0.1"
description = ""
authors = ["Monty Python <monty@python.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
aioli = "^0.5.0"
aioli_openapi = "^0.1.7"
toml = "^0.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
